# stock-monitor-cpp

./: .gitignore  CMakeLists.txt  README.md  getStockPrice.cpp  getStockPrice.hpp  main.cpp  secrets.example.json  sendSMS.cpp  sendSMS.hpp  stocks.json
.github/workflows/: Build_Release.yml
src/: main.cpp  main.hpp
src/core/: configSecrets.cpp  configSecrets.hpp  getStockPrice.cpp  getStockPrice.hpp  loadStocks.cpp  loadStocks.hpp  monitorStock.cpp  monitorStock.hpp  sendSMS.cpp
